--- a/app/src/main/res/layout/payment_edit_payer_row_view.xml
+++ b/app/src/main/res/layout/payment_edit_payer_row_view.xml
@@ -7,23 +7,35 @@
     <Button
         android:id="@+id/payment_edit_payer_row_view_button_currency"
         android:layout_column="0"
-        android:width="50dp"
+        android:width="30dp"
         android:gravity="center"/>
 
     <EditText
         android:id="@+id/payment_edit_payer_row_view_input_amount"
         android:layout_column="1"
-        android:width="100dp"
+        android:width="60dp"
         android:focusable="true"
         android:focusableInTouchMode="true">
         <requestFocus/>
     </EditText>
 
+    <EditText
+        android:id="@+id/payment_edit_payer_row_view_input_weight"
+        android:layout_column="2"
+        android:width="60dp"
+        android:inputType="numberDecimal"
+        android:focusable="true"
+        android:focusableInTouchMode="true">
+    </EditText>
+
     <TextView
         android:id="@+id/payment_edit_payer_row_view_output_name"
-        android:layout_column="2"
+        android:layout_column="3"
         android:gravity="left|center_vertical"
         android:paddingLeft="10dp"
         android:singleLine="false"/>
+
+
+
 
 </TableRow>
