--- a/app/src/main/res/layout/payment_edit_view.xml
+++ b/app/src/main/res/layout/payment_edit_view.xml
@@ -72,7 +72,7 @@
                 android:id="@+id/paymentView_createPaymentPayerTableLayout"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:stretchColumns="2">
+                android:stretchColumns="3">
 
                 <TableRow>
 
@@ -85,10 +85,11 @@
                         android:paddingLeft="5dp"
                         android:text="@string/payment_edit_view_textView_label_amount" />
 
+                        <!--android:entries="@array/payment_edit_view_spinner_amount_weight"-->
                     <LinearLayout
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
-                        android:layout_column="2"
+                        android:layout_column="3"
                         android:orientation="horizontal">
 
                         <TextView
@@ -224,23 +225,27 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/paymentView_radioGroupTravellersCharged"
-                android:stretchColumns="2">
+                android:stretchColumns="3">
 
                 <TableRow>
 
-                    <TextView
+                    <Spinner
                         android:id="@+id/paymentView_textView_payee_label_amount"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_column="0"
-                        android:layout_gravity="bottom"
+                        android:layout_gravity="bottom|left"
                         android:paddingLeft="5dp"
+                        android:layout_span="2"
+                        android:entries="@array/payment_edit_view_spinner_amount_weight"
                         android:text="@string/payment_edit_view_textView_payee_label_amount" />
 
                     <LinearLayout
-                        android:layout_width="fill_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_column="2"
+                        android:layout_span="2"
+                        android:layout_gravity="right"
                         android:orientation="horizontal">
 
                         <TextView
